kubernetes/apps/epicgames-freegames/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: epicgames-free
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
