kubernetes/apps/epicgames-freegames/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: epicgames-free
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
